--- a/main_page.html
+++ b/main_page.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, shrink-to-fit=no, user-scalable=0">
+    <link href="bootstrap-5.1.3/css/bootstrap.css" rel="stylesheet">
     <link href="common_style.css" rel="stylesheet">
     <link href="main_page.css" rel="stylesheet">
-    <link href="bootstrap-5.1.3/css/bootstrap.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&amp;family=Poppins:wght@400;500;600;700&amp;display=swap"
           rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&display=swap"
@@ -17,14 +17,19 @@
 <body>
 <header class="container-fluid bg-header">
     <div class="container">
-        <div class="row">
+        <div class="row-position">
+            <h1 class="heading-header">Find your favourite Pokémon</h1>
+            <img class="img-style" src="img/pokemon.png" alt="Pokemon">
+        </div>
+
+        <!--<div class="row">
             <div class="col-lg-9 heading-header">
                 <h1>Find your favourite Pokémon</h1>
             </div>
             <div class="col-lg-3">
                 <img class="img-style" src="img/pokemon.png" alt="Pokemon">
             </div>
-        </div>
+        </div>-->
     </div>
 </header>
 <main>
@@ -43,7 +48,7 @@
     </div>
     <div class="container">
         <ol class="grid-container">
-            <li data-impression='{"id":"1","name":"Clefary"}'>
+            <li data-impression='{"id":"1"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -58,7 +63,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"2"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -73,7 +78,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"3"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -88,7 +93,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"4"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -103,7 +108,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"5"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -118,7 +123,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"6"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -133,7 +138,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"7"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -148,7 +153,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"8"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="card-block">
@@ -163,7 +168,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"9"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -178,7 +183,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"10"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -193,7 +198,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"11"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -208,7 +213,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"12"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -223,7 +228,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"13"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -238,7 +243,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"14"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -253,7 +258,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"15"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -268,7 +273,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"16"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -283,7 +288,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"17"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -298,7 +303,7 @@
                     </div>
                 </div>
             </li>
-            <li>
+            <li data-impression='{"id":"18"}'>
                 <div class="block-pokemon">
                     <input class="checkbox-style" type="checkbox" name="ckeckbox">
                     <div class="col-lg-2 card-block">
@@ -315,17 +320,28 @@
             </li>
         </ol>
     </div>
-    <div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
-            <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"/>
-        </svg>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+    <div class="container">
+        <ul class="pagination pagination-position">
+            <li class="page-item">
+                <a href="javascript:void(0);">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35.63" height="38" fill="var(--bs-cyan)" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+                        <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z"/>
+                    </svg>
+                </a>
+
+            </li>
+            <li class="page-item"><a class="page-link color-link" href="javascript:void(0);">1</a></li>
+            <li class="page-item"><a class="page-link color-link" href="javascript:void(0);">2</a></li>
+            <li class="page-item"><a class="page-link color-link" href="javascript:void(0);">3</a></li>
+            <li class="page-item"><a class="page-link color-link" href="javascript:void(0);">4</a></li>
+            <li class="page-item"><a class="page-link color-link" href="javascript:void(0);">5</a></li>
+            <li class="page-item">
+                <a href="javascript:void(0);">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="35.63" height="38" fill="var(--bs-cyan)" class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
+                        <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v12zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1z"/>
+                    </svg>
+                </a>
+            </li>
         </ul>
     </div>
 </main>
