Change design and add link on Pokémon page

--- a/pokemon_page.html
+++ b/pokemon_page.html
@@ -34,7 +34,7 @@
         <h1 class="special-pokemon">Clefary</h1>
         <div class="row items-position">
             <div class="col-lg-6 card-block">
-                <div class="yellow-block">
+                <div class="blue-block">
                     <div class="img-position">
                         <img class="pokemon-img"
                              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
