Fin bugs and fix it

--- a/pokemon_page.html
+++ b/pokemon_page.html
@@ -32,6 +32,7 @@
     </section>
     <main>
         <h1 class="special-pokemon">Clefary</h1>
+        <p class="short-info">This Pokémon's damaging moves have a 10% chance to make the target [flinch]{mechanic:flinch} with each hit if they do not already cause flinching as a secondary effect. This ability does not stack with a held item. Overworld: The wild encounter rate is halved while this Pokémon is first in the party.</p>
         <div class="row items-position">
             <div class="col-lg-6 card-block">
                 <div class="blue-block">
