--- a/main_page.html
+++ b/main_page.html
@@ -7,10 +7,8 @@
     <link href="bootstrap-5.1.3/css/bootstrap.css" rel="stylesheet">
     <link href="common_style.css" rel="stylesheet">
     <link href="main_page.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&amp;family=Poppins:wght@400;500;600;700&amp;display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&family=Texturina:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faustina:wght@300&display=swap" rel="stylesheet">
     <title>Find your favourite pokemon</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
@@ -45,7 +43,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -62,7 +60,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -79,7 +77,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -96,7 +94,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -113,7 +111,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -130,7 +128,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -147,7 +145,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -164,7 +162,7 @@
                     <div class="card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -181,7 +179,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -198,7 +196,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -215,7 +213,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -232,7 +230,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -249,7 +247,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -266,7 +264,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -283,7 +281,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -300,7 +298,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -317,7 +315,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
@@ -334,7 +332,7 @@
                     <div class="col-lg-2 card-block">
                         <div class="blue-block">
                             <div class="img-position">
-                                <a href="pokemon_page.html">
+                                <a href="pokemon_page.html" target="_blank">
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
