--- a/pokemon_page.html
+++ b/pokemon_page.html
@@ -7,10 +7,9 @@
     <link href="bootstrap-5.1.3/css/bootstrap.css" rel="stylesheet">
     <link href="common_style.css" rel="stylesheet">
     <link href="pokemon_page.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&amp;family=Poppins:wght@400;500;600;700&amp;display=swap"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&display=swap"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&family=Texturina:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Faustina:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Athiti:wght@500&display=swap" rel="stylesheet">
     <title>Pokémon</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
