--- a/compare_list.html
+++ b/compare_list.html
@@ -14,13 +14,119 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-<header class="container-fluid">
-    <a class="transition-button" href="main_page.html">
-        <button class="click">Back to List</button>
-    </a>
-
-    <h1>Compare Pokémon's Data</h1>
+<header class="container-fluid container-items pt-4">
+    <div class="mini-container">
+        <div class="button-container-position">
+            <a class="transition-button" href="main_page.html">
+                <button class="click">Back to List</button>
+            </a>
+        </div>
+        <div class="container-fluid cover-container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="justify-content-center heading-style">Compare Pokémon's Data</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </header>
+<main class="container-fluid container-items pt-4">
+    <table class=" show-items">
+        <thead>
+        <tr>
+            <th class="title-point">
+                <span class="title-position">Pokémon</span>
+                <hr class="hr-line-title">
+            </th>
+            <th class="info-point" id="3">
+                <span>Clefary</span>
+                <hr class="hr-line">
+            </th>
+            <th class="info-point" id="5">
+                <span>Clefary</span>
+                <hr class="hr-line">
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td></td>
+            <td>
+                <div class="card-block">
+                    <div class="blue-block">
+                        <div class="img-position">
+                            <img class="pokemon-img"
+                                 src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
+                                 alt="Clefary">
+                            <button class="button-style">Clefary</button>
+                        </div>
+                    </div>
+                </div>
+            </td>
+            <td>
+                <div class="card-block">
+                    <div class="blue-block">
+                        <div class="img-position">
+                            <img class="pokemon-img"
+                                 src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
+                                 alt="Clefary">
+                            <button class="button-style">Clefary</button>
+                        </div>
+                    </div>
+                </div>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <table class="col-lg-6">
+        <tbody>
+        <tr>
+            <th class="title-point">Genger</th>
+            <td class="info-point">Female</td>
+            <td class="info-point">Male</td>
+        </tr>
+        <tr>
+            <th class="title-point">Base Experience</th>
+            <td class="info-point">113</td>
+            <td class="info-point">125</td>
+        </tr>
+        <tr>
+            <th class="title-point">Height</th>
+            <td class="info-point">6</td>
+            <td class="info-point">9</td>
+        </tr>
+        <tr>
+            <th class="title-point">Width</th>
+            <td class="info-point">75</td>
+            <td class="info-point">89</td>
+        </tr>
+        <tr>
+            <th class="title-point">Level</th>
+            <td class="info-point">100</td>
+            <td class="info-point">105</td>
+        </tr>
+        <tr>
+            <th class="title-point">Natures</th>
+            <td class="info-point">Attack</td>
+            <td class="info-point">Attack</td>
+        </tr>
+        <tr>
+            <th class="title-point">Abilities</th>
+            <td class="info-point">Friend-Guard</td>
+            <td class="info-point">Friend-Guard</td>
+        </tr>
+        <tr>
+            <th class="title-point">Type</th>
+            <td>
+                <span class="highlight-power">Fairy</span>
+            </td>
+            <td>
+                <span class="highlight-power">Fairy</span>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</main>
 
 </body>
 </html>
