experimenting with JS

--- a/main_page.html
+++ b/main_page.html
@@ -12,7 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&display=swap"
           rel="stylesheet">
     <title>Find your favourite pokemon</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/lib/pokeapi.js"></script>
+    <script src="/lib/jquery-3.6.0.min.js"></script>
+    <script src="/scripts/pokemon_list.js"></script>
 </head>
 <body>
 <header class="container-fluid bg-header">
@@ -38,314 +40,7 @@
         </div>
     </div>
     <div class="container">
-        <ol class="grid-container">
-            <li data-impression='{"id":"1"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"2"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"3"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"4"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"5"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"6"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"7"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"8"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"9"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"10"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"11"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"12"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"13"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"14"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"15"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"16"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"17"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li data-impression='{"id":"18"}'>
-                <div class="block-pokemon">
-                    <input class="checkbox-style" type="checkbox" name="ckeckbox">
-                    <div class="col-lg-2 card-block">
-                        <div class="blue-block">
-                            <div class="img-position">
-                                <a href="pokemon_page.html">
-                                    <img class="pokemon-img"
-                                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                                         alt="Clefary">
-                                    <button class="button-style">Clefary</button>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ol>
+        <ol class="grid-container" id="pokemon_list"></ol>
     </div>
     <div class="container">
         <ul class="pagination pagination-position">
