--- a/pokemon_page.html
+++ b/pokemon_page.html
@@ -12,7 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&display=swap"
           rel="stylesheet">
     <title>Pokémon</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="/lib/pokeapi.js"></script>
+    <script src="/lib/jquery-3.6.0.min.js"></script>
+    <script src="/scripts/pokemon_list.js"></script>
 </head>
 <body>
 <div class="container bg-white">
