Change style's images, add some styles for media screen

--- a/pokemon_page.html
+++ b/pokemon_page.html
@@ -33,17 +33,13 @@
         <h1 class="special-pokemon">Clefary</h1>
         <p class="short-info">This Pokémon's damaging moves have a 10% chance to make the target [flinch]{mechanic:flinch} with each hit if they do not already cause flinching as a secondary effect. This ability does not stack with a held item. Overworld: The wild encounter rate is halved while this Pokémon is first in the party.</p>
         <div class="row items-position">
-            <div class="col-lg-6 card-block">
-                <div class="blue-block">
-                    <div class="img-position">
-                        <img class="pokemon-img"
-                             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
-                             alt="Clefary">
-                        <button class="button-style">Clefary</button>
-                    </div>
-                </div>
+            <div class="col-lg-6 pokemon-card">
+                    <img class="pokemon-img"
+                         src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
+                         alt="Clefary">
+                    <button class="button-style">Clefary</button>
             </div>
-            <table class="col-lg-6">
+            <table class="col-lg-6 mobile-mt">
                 <thead>
                 <tr>
                     <th class="title-data">Pokémon Data</th>
