Changed pokemon's cards and their size. Set <div> instead <button>. Tested "main", "pokemon_page", "compare_list", found bugs and fixed it.

--- a/pokemon_page.html
+++ b/pokemon_page.html
@@ -36,7 +36,7 @@
                     <img class="pokemon-img"
                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                          alt="Clefary">
-                    <button class="button-style">Clefary</button>
+                    <div class="name-pokemon">Clefary</div>
             </div>
             <table class="col-lg-6 mobile-mt">
                 <thead>
