--- a/compare_list.html
+++ b/compare_list.html
@@ -52,7 +52,7 @@
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
-                                    <button class="button-style">Clefary</button>
+                                    <div class="name-pokemon">Clefary</div>
                                 </div>
                             </td>
                             <td>
@@ -60,7 +60,7 @@
                                     <img class="pokemon-img"
                                          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/35.png"
                                          alt="Clefary">
-                                    <button class="button-style">Clefary</button>
+                                    <div class="name-pokemon">Clefary</div>
                                 </div>
                             </td>
                         </tr>
