STUDYING JS: 10% myself, 90% help outside trying to study javascript - how to work with loops, what is API and how it works, how to use jQuery for modifying elements, AJAX requests, etc

--- a/main_page.html
+++ b/main_page.html
@@ -62,6 +62,10 @@
                 </a>
             </li>
         </ul>
+        <div class="compare-items">
+            <button class="clean-items">Clear all</button>
+            <button class="button-compare" disabled>Compare (1/2)</button>
+        </div>
     </div>
 </main>
 </body>
