--- a/main_page.html
+++ b/main_page.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Lemonada&family=Stick&family=Texturina:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Faustina:wght@300&display=swap" rel="stylesheet">
     <title>Find your favourite pokemon</title>
-    <script src="/lib/pokeapi.js"></script>
-    <script src="/lib/jquery-3.6.0.min.js"></script>
-    <script src="/scripts/pokemon_list.js"></script>
+    <script src="lib/pokeapi.js"></script>
+    <script src="lib/jquery-3.6.0.min.js"></script>
+    <script src="scripts/pokemon_list.js"></script>
 </head>
 <body>
 <header class="container-fluid bg-header">
